@@ -3,8 +3,22 @@ FROM phusion/baseimage:0.9.16
 MAINTAINER Ahmad Iqbal Ali <ahmad@aurorasolutions.io>
 
 RUN rm -rf /etc/service/sshd /etc/my_init.d/00_regen_ssh_host_keys.sh
+# Set customizable env vars defaults.
+ENV JAVA_VER 7
+ENV JAVA_HOME /usr/lib/jvm/java-7-oracle
+ENV JAVA_OPTS -Xms256m -Xmx512m -XX:MaxPermSize=256m
 
-#install utilities
+RUN echo 'deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main' >> /etc/apt/sources.list && \
+    echo 'deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main' >> /etc/apt/sources.list && \
+    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C2518248EEA14886 && \
+    apt-get update && \
+    echo oracle-java${JAVA_VER}-installer shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections && \
+    apt-get install -y --force-yes --no-install-recommends oracle-java${JAVA_VER}-installer oracle-java${JAVA_VER}-set-default && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists && \
+    rm -rf /var/cache/oracle-jdk${JAVA_VER}-installer
+
+# Download Install utilities
 RUN apt-get update && apt-get install -y -q unzip wget curl git
 
 RUN mkdir /etc/service/go-agent
